--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,11 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+.nav-header-icon {
+    @extend .text-decoration-none;
+    @extend .text-white;
+    @extend .nav-link;
+    @extend .d-none;
+    @extend .d-sm-block;
+}
