--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -87,3 +87,15 @@ $border: 15px;
     border-bottom-color: #0d6efd;
     opacity: 75%;
 }
+// delete icon
+.delete {
+    &:hover {
+        color: red;
+        cursor: pointer;
+    }
+}
+
+.delete-disabled {
+    @extend .pe-none;
+    opacity: 75%;
+}
